<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelFoodItem"
        app:showAsAction="always"/>

    <item
        android:id="@+id/item_updateuser"
        android:icon="@drawable/ic_baseline_supervised_user_circle_24"
        android:iconTint="#000000"
        android:title="@string/menu_update_user"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_gallery"
        android:icon="@drawable/ic_baseline_image_24"
        android:iconTint="#070606"
        android:title="@string/menu_gallery"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_logout"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:iconTint="#000000"
        android:title="@string/menu_logout"
        app:showAsAction="always" />
</menu>