<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myFoodDiaryFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fooddiary.MyFoodDiaryFragmentView">




        <EditText
            android:id="@+id/foodTitle"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/hint_foodTitle"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/description"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_foodDescription"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodTitle" />

        <NumberPicker
            android:id="@+id/amountOfCals"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            app:layout_constraintRight_toRightOf="@+id/foodImage"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <ImageView
            android:id="@+id/foodImage"
            android:layout_width="237dp"
            android:layout_height="180dp"
            android:layout_marginStart="136dp"
            app:layout_constraintLeft_toLeftOf="@+id/amountOfCals"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:srcCompat="@drawable/ic_baseline_image_24" />

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_addImage"
            android:textColor="#455A64"
            app:layout_constraintTop_toBottomOf="@id/amountOfCals"
            tools:layout_editor_absoluteY="371dp" />

        <Button
            android:id="@+id/foodItemLocation"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/colorAccent"
            android:text="@string/button_location"
            android:textColor="#455A64"
            app:layout_constraintStart_toStartOf="@+id/chooseImage"
            app:layout_constraintTop_toBottomOf="@+id/chooseImage"
            />

        <Button
            android:id="@+id/captureImage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/button_captureImage"
            android:textColor="#455A64"
            app:layout_constraintEnd_toEndOf="@+id/chooseImage"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/foodItemLocation"
            app:layout_constraintTop_toBottomOf="@+id/chooseImage" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/captureImage"
            android:background="@color/colorAccent"
            android:text="@string/button_addFood"
            android:textColor="#455A64"
             />




</androidx.constraintlayout.widget.ConstraintLayout>